--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1782,6 +1782,7 @@
       "comment": "Комментарий блогеру...",
       "result": "Результат",
       "post": "Начните заполнять рекламный пост чтобы увидеть результат",
+      "site": "Опишите свое Техническое задание подробно в комментраии и приложите необходимые файлы",
       "template": "Загрузить шаблон",
       "comment_to_post": "Комментарий к техническому заданию: ",
       "see_post_mobile_btn": "Посмотреть пост",
@@ -1796,6 +1797,11 @@
         "youtube": {
           "shorts": "Youtube Shorts",
           "videos": "Youtube Videos"
+        },
+        "site": {
+          "default": "Сайт",
+          "telegram": "Telegram",
+          "instagram": "Instagram"
         }
       },
 
