--- a/public/locales/uz/translation.json
+++ b/public/locales/uz/translation.json
@@ -1532,6 +1532,7 @@
       "comment": "Bloger uchun izoh...",
       "result": "Natija",
       "post": "Natijani ko'rish uchun reklama postini to'ldirishni boshlang",
+      "site": "Izohlarda texnik vazifangizni batafsil tavsiflang va kerakli fayllarni ilova qiling",  
       "template": "Shablonni yuklash",
       "comment_to_post": "Texnik topshiriq uchun izoh: ",
       "see_post_mobile_btn": "Postni ko'rish",
