fix: watets and topup

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1451,6 +1451,7 @@
       "selfemployed": "Individual",
       "entity": "Legal Entity",
       "individual": "Sole Proprietor",
+      "organization": "Organization",
       "selfemployedaccount": "Self-Employed"
     },
     "subtypes": {
