--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1706,6 +1706,7 @@
       "selfemployed": "Физ. лицо",
       "entity": "Юр. лицо",
       "individual": "ИП",
+      "organization": "Организация",
       "selfemployedaccount": "Самозанятый"
     },
     "subtypes": {
