--- a/public/locales/uz/translation.json
+++ b/public/locales/uz/translation.json
@@ -1456,6 +1456,7 @@
       "selfemployed": "Jismoniy shaxs",
       "entity": "Yuridik shaxs",
       "individual": "Yakka tartibdagi tadbirkor",
+      "organization": "Tashkilot",
       "selfemployedaccount": "O'zini o'zi band qilgan"
     },
     "subtypes": {
